<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/lightbuld_48dp"
            android:title="@string/title_activity_about_guide" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_48dp"
            android:title="@string/title_activity_home" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact_48dp"
            android:title="@string/title_activity_contact" />
        <!-- <item
            android:id="@+id/nav_quote"
            android:icon="@drawable/quote_48dp"
            android:title="@string/title_activity_quote" /> -->
        <item
            android:id="@+id/nav_rep"
            android:icon="@drawable/rep_48dp"
            android:title="@string/title_activity_rep" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_48dp"
            android:title="@string/title_activity_about" />
       <!-- <item
            android:id="@+id/nav_demo"
            android:icon="@drawable/about_48dp"
            android:title="@string/title_activity_demo" />-->

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_activity_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_activity_devContact" />
        </menu>
    </item>

</menu>
